Add storycard and application components.

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,13 @@
-body {
-  div {
-    background-color: red;
-  }
+html {
+  box-sizing: border-box;
+}
+
+*, *:after, *:before {
+  box-sizing: inherit;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
 }
