Add epic list box container with tests

--- a/src/application/style.scss
+++ b/src/application/style.scss
@@ -11,7 +11,7 @@ html {
   border: 0;
 }
 
-.epic-container { 
+.epic-list-box { 
   display: flex;
   padding-left: 100px;
 }
@@ -61,7 +61,7 @@ html {
   background-color: aqua;
 }
 
-.epic-container {
+.epic-list-box {
   background-color: green;
 }
 
